# ghost-replay

./: CMakeLists.txt  about.md  mod.json
src/: FileManager.cpp  FileManager.hpp  GhostManager.cpp  GhostManager.hpp  GhostPlayer.cpp  GhostPlayer.hpp  GhostPopup.cpp  GhostPopup.hpp  RecordData.cpp  RecordData.hpp  Recorder.cpp  Recorder.hpp  main.cpp
src/hooks/: MenuLayer.cpp  PlayLayer.cpp  PlayerObject.cpp
src/utils/: Utils.hpp
